# boh_app

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .eslintrc.yml  .gitignore  .graphqlrc.ts  .pre-commit-config.yaml  .prettierrc.cjs  .prettierrc.yaml  .yarnrc.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  eslint.config.mjs  package.json  pyproject.toml  pytest.ini  setup.py  tox.ini  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  run_tests.yml
.yarn/sdks/prettier/: index.js
docs/: conf.py  installation.rst  usage.rst
docs/reference/: boh_app.rst  index.rst
src/boh_app/: __main__.py  database.py  graphql.py  models.py  serializers.py  server.py  settings.py  utils.py
src/boh_app/data/: _skill.json  aspect.json  assistant.json  gen_utils.py  generate_items.py  generate_recipes.py  generate_skills.py  generate_workstations.py  load_data.py  our_items.txt  principle.json  process_autosave.py  skill.json  types.py  types_marshmallow.py  types_sqla.py  utils.py  wisdom.json  workstation.json  workstation_slot.json  workstation_type.json
src/boh_app/serializers/: __init__.py  marshmallow.py  pydantic.py
src/front/: App.tsx  filters.tsx  index.html  main.tsx  types.tsx  userContext.tsx
src/front/components/: AvatarStack.tsx  Collapsible.tsx  Drawer.tsx  ElevationScroll.tsx  ErrorDisplay.tsx  Icon.tsx  ItemsDrawer.tsx  LoadingIndicator.tsx  PrincipleFilterBar.tsx  PrincipleFilterButton.tsx  _filters.tsx
src/front/components/Drawer/: index.tsx  styled.tsx
src/front/components/ItemsDrawer/: context.tsx  index.tsx
src/front/routes/: Aspects.tsx  Assistant.tsx  Craft.tsx  Home.tsx  Items.tsx  Principles.1.tsx  Principles.tsx  Skills.tsx  Workstation.tsx
tests/: conftest.py  test_boh_app.py  test_gen.py  test_gql.py  test_serializer.py  test_steamdirs.py
