[project]
name = "boh-app"
version = "0.0.0"
license = "MIT"
description = "Companion app for Book of Hours"
readme = "README.rst"
authors = [
    { name = "Desiree D.", email = "ded8393@gmail.com" },
]
urls.Homepage = "https://github.com/ded8393/boh_app"
#urls.Documentation = "https://boh_app.readthedocs.io/",
#urls.Changelog = "https://boh_app.readthedocs.io/en/latest/changelog.html",
urls.Issues = "https://github.com/ded8393/boh_app/issues"
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
keywords = []
requires-python =  ">=3.11"
dependencies = [
    "sqlalchemy>=2",
    "fastapi",  # router
    "uvicorn",  # server
    "graphql-sqlalchemy @ git+https://github.com/flying-sheep/graphql-sqlalchemy.git@fixes",  # sqlchemy schema to graphql
    "ariadne",  # graphql API endpoint
    "marshmallow-sqlalchemy"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
python = "3.11"
[tool.hatch.envs.default.scripts]
server = "uvicorn boh_app.server:app --reload"

[tool.hatch.envs.test]
features = ["test"]
[tool.hatch.envs.test.scripts]
run = "pytest -vv {args}"
cov = "pytest --cov --cov-report=term --cov-report=xml -vv {args}"

[tool.ruff.per-file-ignores]
"ci/*" = ["S"]

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
]
line-length = 140
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
unfixable = ["F401"]
src = ["src", "tests"]
target-version = "py37"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.isort]
forced-separate = ["conftest"]

[tool.black]
line-length = 140
target-version = ["py37"]

[tool.pytest.ini_options]
norecursedirs = ["migrations", "src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=\\*.rst",
    "--tb=short",
    "--pyargs",
]
filterwarnings = [
    "error", # warnings as errors
    # You can add exclusions, some examples:
    # ignore:'boh_app' defines default_app_config:PendingDeprecationWarning::
    # ignore:The {{% if:::
    # ignore:Coverage disabled via --no-cov switch!
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
